--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,18 +31,25 @@ server {
 
 	location @proxy_to_api {
 
-		proxy_pass http://api;
-
-		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection "upgrade";
-
-		proxy_redirect off;
-		proxy_set_header Host $host;
+		proxy_buffering off;
+		proxy_set_header Referer $http_referer;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header X-Forwarded-Host $server_name;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_set_header X-Forwarded-Port $server_port;
+		proxy_set_header Host $http_host;
 
+		proxy_pass http://api;
+
+		# proxy_http_version 1.1;
+		# proxy_set_header Upgrade $http_upgrade;
+		# proxy_set_header Connection "upgrade";
+
+		# proxy_redirect off;
+		# proxy_set_header Host $host;
+		# proxy_set_header X-Real-IP $remote_addr;
+		# proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		# proxy_set_header X-Forwarded-Host $server_name;
 	}
 	location / {
 		root /usr/share/nginx/html;
